# api_example

./: .gitignore  README.md  docker-compose-dev.yml  learn_fastapi.postman_collection.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1e4809a59ee1_add_phone_number_number_column_to_posts_.py  73b25e30ab56_auto_adding_all_tables.py  75bfe64276da_add_phone_number_number_column_to_posts_.py  a8b328605570_add_post_code_to_posts_table.py
app/: config.py  database.py  main.py  models.py  oauth2.py  requirements.txt  schemas.py
app/routes/: auth.py  post.py  user.py  vote.py
docker/: Dockerfile  docker-compose-dev.yml
fastapi_example/: config.py  database.py  main.py  models.py  oauth2.py
fastapi_example/routes/: auth.py  post.py  user.py  vote.py
tests/: test_users.py
