[tool.poetry]
name = "api_example"
version = "0.1.0"
description = "\"FastAPI framework learn\""
authors = ["sandrii <andriyshvorak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.73.0"}
pydantic = "^1.9.0"
alembic = "^1.7.5"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.31"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
